Updates to post template page, fixes layout bug with banners

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -33,6 +33,8 @@ body {
 	@include font-size($base-font-size);
 	@include line-height($base-font-line);
 
+	color: colour('copy');
+
 
 	@include jacket(ie) {
 		margin: 0;
@@ -91,6 +93,10 @@ body {
 	text-shadow: 2px 2px 2px rgba(#000, 0.1);
 	text-align: center;
 
+	.banner-content {
+		@include gs-span(d, 3, 10, $ie: true);
+	}
+
 	.intro {
 		@include font('body', 'regular');
 		@include font-size(35);
@@ -121,7 +127,6 @@ body {
 .post-list {
 	@include gs-span(d, 4, 9, $ie: true);
 	text-align: center;
-	margin-top: -30px;
 
 	.post {
 		margin-top: 100px;
@@ -149,6 +154,75 @@ body {
 
 		> * {
 			text-decoration: none;
+		}
+	}
+}
+
+.post-header {
+
+	text-align: left;
+
+	.post-title {
+		@include font('body', 'bold');
+		@include font-size(35);
+		@include line-height(35);
+
+		margin: 0 0 10px;
+	}
+
+	.post-meta {
+		@include font('headers', 'bold');
+		@include font-size(16);
+		@include line-height(16);
+
+		margin: 0;
+
+		.post-read {
+			@include font('headers', 'regular');
+		}
+
+		> * {
+			margin-right: 10px;
+		}
+	}
+}
+
+.post-full {
+	.post-body {
+		@include gs-span(d, 3, 10, $ie: true);
+		padding: 50px 0;
+	}
+
+	h1 {
+		@include font('body', 'bold');
+		@include font-size(35);
+		@include line-height(35);
+
+		margin: 50px 0 40px;
+	}
+
+	h2 {
+		@include font('body', 'bold');
+		@include font-size(30);
+		@include line-height(30);
+
+		margin: 50px 0 30px;
+	}
+
+	h3 {
+		@include font('body', 'bold');
+		@include font-size(25);
+		@include line-height(25);
+
+		margin: 50px 0 30px;
+	}
+
+	a {
+		color: colour('accent');
+		font-style: italic;
+
+		&:hover {
+			color: invert(colour('accent'));
 		}
 	}
 }
