--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -40,7 +40,7 @@ $fonts: (
 );
 
 $base-font-size: 18;
-$base-font-line: 28;
+$base-font-line: 30;
 
 // DIRECTORIES
 // ==========================================================================
